[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastnet2ip"
dynamic = ["version"]
description = "Read B&G Fastnet serial data, decode it, and broadcast it over UDP as NMEA 0183 or NMEA 2000"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ghotihook" }]
keywords = ["fastnet", "bandg", "nmea", "nmea0183", "nmea2000", "marine", "sailing", "signalk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
dependencies = [
    "pyserial>=3.5",
    "pyfastnet>=2.0.13",
    "nmea2000>=2026.4.2",
]

[project.urls]
Homepage = "https://github.com/ghotihook/fastnet2ip"
Repository = "https://github.com/ghotihook/fastnet2ip"
Issues = "https://github.com/ghotihook/fastnet2ip/issues"

[project.scripts]
fastnet2ip = "fastnet2ip.__main__:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["fastnet2ip*"]

[tool.setuptools.dynamic]
version = { attr = "fastnet2ip.__version__" }
